refactor: use sf address
